# ardrone

./: BUILDING.txt  README.txt  do_cppcheck.sh
ardrone/: CMakeLists.txt  ardrone2_toolchain.cmake
ardrone/attitude/: CMakeLists.txt  DroneKalman.cpp  attitude.c  attitude.cpp  attitude.h
ardrone/fly/: .gitignore  CMakeLists.txt  controls.c  controls.h  controlthread.c  controlthread.h  flyparams.c  flyparams.h  main_fly.c
ardrone/fly/control_strategies/: pid_strategy.c  pid_strategy.h
ardrone/gpio/: CMakeLists.txt
ardrone/horizontal_velocities/: CMakeLists.txt  horizontal_velocities.c  horizontal_velocities.h  main_horizontal_velocities.c
ardrone/libs/: .gitignore
ardrone/lowpass/: lowpass.h
ardrone/motorboard/: CMakeLists.txt  main_motorboard.c  make.sh  mot.c  motorboard.c
ardrone/navboard/: CMakeLists.txt  main_navboard.c  make.sh  navboard.c  navboard.h
ardrone/util/: util.c  util.h
ardrone/vbat/: CMakeLists.txt  main_vbat.c  make.bat  make.sh  vbat.c  vbat.h
ardrone/video/: CMakeLists.txt  blocksum.c  main_video.c  video.c  video.h
pc/Console/: .gitignore  CMakeLists.txt  Console  Console.cpp  Drone.hpp  Joystick.cpp  Joystick.hpp  Keyboard.cpp  Keyboard.hpp  UdpLogger.hpp  make.sh
pc/Console/JoystickTest/: .gitignore  CMakeLists.txt  JoystickTest  JoystickTest.cpp
pc/plotting/: README.txt
pc/plotting/bearing/: a and m.py  angles.py  angles_raw.py  angles_real.py  ars.py  drone_log_view.py  extract_dronestat.pl  orbit.py  testlib.py  vecsum.py  yaw.py
pc/plotting/dronelib/: dronelib.py  memoize.py
pc/plotting/horvel/: cvtest.py  horvel.py  testlib.py
pc/plotting/sim/: sim.py  simtest.csv
pc/plotting/simlib/: simlib.py
pc/plotting/tuning/: drone_log_view.py  kalman_x_axis.py  pid.py  realtime.py
ros/navdata_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/navdata_publisher/msg/: Flattrim.msg  Navdata.msg  Navdata.msg~  RawNavdata.msg
ros/navdata_publisher/src/: .gitignore  navdata_publisher.cpp  navdata_publisher.cpp~
ros/rotation_estimator/: mainpage.dox  manifest.xml  rotation_estimator.py
ros/vbat_led_warner/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/vbat_led_warner/src/: vbat_led_warner.cpp
ros/vbat_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
(+19 files in other folders)
